--- a/statCalc/prepros.config
+++ b/statCalc/prepros.config
@@ -89,11 +89,15 @@
       "remotePath": "",
       "timeout": 20000,
       "autoUpload": false,
+      "reuseConnection": true,
       "connectionType": "ftp",
       "history": []
     },
     "packages": {
       "createPackageLock": true
+    },
+    "images": {
+      "preserveOriginal": true
     },
     "tasks": {
       "autoprefixer": {
@@ -118,7 +122,8 @@
                 "> 2%",
                 "not dead"
               ],
-              "preserveImports": false
+              "preserveImports": false,
+              "polyfills": false
             }
           },
           "@babel/preset-react": true,
@@ -164,7 +169,8 @@
                     "> 2%",
                     "not dead"
                   ],
-                  "preserveImports": false
+                  "preserveImports": false,
+                  "polyfills": false
                 }
               },
               "@babel/preset-react": true,
@@ -356,6 +362,18 @@
       },
       "png": {
         "quality": 90
+      },
+      "postcss-import": {
+        "ignoreKeywords": [],
+        "sourceMap": false
+      },
+      "postcss-preset-env": {
+        "stage": 2,
+        "browsers": [
+          "> 2%",
+          "not dead"
+        ],
+        "sourceMap": false
       },
       "pug": {
         "pretty": true
@@ -565,6 +583,14 @@
           {
             "task": "copy",
             "enable": true
+          },
+          {
+            "task": "postcss-import",
+            "enable": false
+          },
+          {
+            "task": "postcss-preset-env",
+            "enable": false
           },
           {
             "task": "autoprefixer",
