--- a/statCalc/prepros.config
+++ b/statCalc/prepros.config
@@ -130,6 +130,7 @@
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -139,6 +140,7 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
@@ -177,6 +179,7 @@
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -186,6 +189,7 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
@@ -221,6 +225,7 @@
       },
       "dart-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -308,6 +313,7 @@
           "properties": true,
           "pure_funcs": [],
           "pure_getters": false,
+          "reduce_funcs": true,
           "reduce_vars": true,
           "sequences": true,
           "side_effects": true,
@@ -353,6 +359,7 @@
       },
       "node-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
