--- a/statCalc/prepros.config
+++ b/statCalc/prepros.config
@@ -228,6 +228,7 @@
         "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
+        "removeCharset": false,
         "sourceMap": false
       },
       "haml": {
@@ -365,6 +366,7 @@
         "outputStyle": "expanded",
         "precision": 10,
         "sourceMap": false,
+        "removeCharset": false,
         "sourceComments": false
       },
       "png": {
